--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "graphql": "^16.12.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "styled-components": "^6.3.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
