--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^4.1.4",
+    "dotenv": "^17.3.1",
     "graphql": "^16.12.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
