--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "styled-components": "^6.3.9"
+    "react-router-dom": "^7.13.0",
+    "styled-components": "^6.3.9",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
